// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button add custom class 1`] = `
<button
  className="button__round"
  onClick={[Function]}
>
  auth
</button>
`;

exports[`Storyshots Button with Login text 1`] = `
<button
  className="button__primary"
  onClick={[Function]}
>
  Sign In
</button>
`;

exports[`Storyshots Button with submit text 1`] = `
<button
  className="button__primary"
  onClick={[Function]}
>
  Submit
</button>
`;

exports[`Storyshots Button without classname prop 1`] = `
<button
  className="button__primary"
  onClick={[Function]}
>
  no class
</button>
`;

exports[`Storyshots Feed card card design 1`] = `
<div
  className="feed-card"
>
  <div
    className="feed-card__image-div"
  >
    <img
      alt="card"
      className="feed-card__image"
      src="https://i.pinimg.com/originals/cf/eb/30/cfeb3055f02670a1a19edf52b02f5b7a.jpg"
    />
  </div>
  <div
    className="feed-card__details"
  >
    <div
      className="feed-card__info"
    >
      <p
        className="feed-card__tag"
      >
        productivity
      </p>
      <a
        href="/articles/adedef-dfrer-1223"
        onClick={[Function]}
      >
        <h3
          className="feed-card__title"
        >
          How to make good foed believe in something like anonimous
        </h3>
      </a>
      <p
        className="feed-card__date"
      >
        23rd June 2019
      </p>
      <img
        alt="card"
        className="feed-card__profile-image"
        src="https://militaryfamilies.psu.edu/wp-content/uploads/2019/04/placeholder_profile_photo.png"
      />
    </div>
    <div
      className="feed-card__icons"
    >
      <div
        className="feed-card__component"
      >
        BM
      </div>
      <div
        className="feed-card__component"
      >
        VW
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Icon active 1`] = `
<button
  aria-label="upvote"
  className="icon icon--upvote icon--active"
  onClick={[Function]}
  onKeyDown={[Function]}
  type="button"
/>
`;

exports[`Storyshots Icon downvote 1`] = `
<button
  aria-label="downvote"
  className="icon icon--downvote"
  onClick={[Function]}
  onKeyDown={[Function]}
  type="button"
/>
`;

exports[`Storyshots Icon upvote 1`] = `
<button
  aria-label="upvote"
  className="icon icon--upvote"
  onClick={[Function]}
  onKeyDown={[Function]}
  type="button"
/>
`;

exports[`Storyshots Input field with email name 1`] = `
<label
  className="input__label"
  htmlFor="email"
>
  <input
    className="input__field"
    name="email"
    onChange={[Function]}
    placeholder="Email"
    type="text"
  />
</label>
`;

exports[`Storyshots Input password field 1`] = `
<label
  className="input__label"
  htmlFor="email"
>
  <input
    className="input__field"
    name="email"
    onChange={[Function]}
    placeholder="Password"
    type="password"
  />
</label>
`;

exports[`Storyshots Modal click closed modal button 1`] = `
<div
  className="modal modal--hide"
>
  <div
    className="modal__modal-content"
  >
    <button
      className="modal__close"
      onClick={[Function]}
      type="button"
    >
      ✕
    </button>
    <div
      className="modal__left"
    >
      <h2
        className="modal__head"
      >
        Share your stories
      </h2>
      <h1
        className="modal__welcome"
      >
        Create your free account
      </h1>
      <p
        className="modal__text"
      >
        Sign into your account to serve you more personalised stories from creatives
      </p>
    </div>
    <div
      className="modal__right"
    >
      <h4
        className="modal__heading"
      >
        Select one to get started
      </h4>
      <div
        className="modal__social-login"
      >
        IBUKUN COMPONENT
      </div>
      <div
        className="modal__seperator"
      >
        <p>
          or
        </p>
      </div>
      <div
        className="modal__auth-component"
      >
        <div
          className="modal__social-login"
        >
          JONATUS COMPONENT
        </div>
        <div
          className="modal__setup-tag"
        >
          <p>
            Already have an account ? 
            <button
              className="modal__create-account"
              onClick={[Function]}
              type="button"
            >
              Sign in
            </button>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal click sign in 1`] = `
<div
  className="modal modal--show"
>
  <div
    className="modal__modal-content"
  >
    <button
      className="modal__close"
      onClick={[Function]}
      type="button"
    >
      ✕
    </button>
    <div
      className="modal__left"
    >
      <h2
        className="modal__head"
      >
        Share your stories
      </h2>
      <h1
        className="modal__welcome"
      >
        Welcome back
      </h1>
      <p
        className="modal__text"
      >
        Sign into your account to serve you more personalised stories from creatives
      </p>
    </div>
    <div
      className="modal__right"
    >
      <h4
        className="modal__heading"
      >
        Select one to get started
      </h4>
      <div
        className="modal__social-login"
      >
        IBUKUN COMPONENT
      </div>
      <div
        className="modal__seperator"
      >
        <p>
          or
        </p>
      </div>
      <div
        className="modal__auth-component"
      >
        <form
          className="login-form"
          onSubmit={[Function]}
        >
          <div
            className="login-form__success login-form__success--hide"
          >
            SIGNIN SUCCESSFUL !
          </div>
          <label
            className="input__label"
            htmlFor="email"
          >
            <input
              className="input__field"
              name="email"
              onChange={[Function]}
              placeholder="Email Address"
              type="text"
            />
          </label>
          <label
            className="input__label"
            htmlFor="password"
          >
            <input
              className="input__field"
              name="password"
              onChange={[Function]}
              placeholder="Password"
              type="password"
            />
          </label>
          <section
            className="login-form__errors"
          />
          <section
            className="login-form__submit-btn"
          >
            <button
              className="button__primary"
              type="submit"
            >
              Sign in
            </button>
          </section>
        </form>
        <div
          className="modal__setup-tag"
        >
          <p>
            Don't have an account ? 
            <button
              className="modal__create-account"
              onClick={[Function]}
              type="button"
            >
              Sign up
            </button>
          </p>
          <p>
            Forgot your password ?  
            <span
              className="modal__create-account"
            >
              Reset password
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal default signup view 1`] = `
<div
  className="modal modal--show"
>
  <div
    className="modal__modal-content"
  >
    <button
      className="modal__close"
      onClick={[Function]}
      type="button"
    >
      ✕
    </button>
    <div
      className="modal__left"
    >
      <h2
        className="modal__head"
      >
        Share your stories
      </h2>
      <h1
        className="modal__welcome"
      >
        Create your free account
      </h1>
      <p
        className="modal__text"
      >
        Sign into your account to serve you more personalised stories from creatives
      </p>
    </div>
    <div
      className="modal__right"
    >
      <h4
        className="modal__heading"
      >
        Select one to get started
      </h4>
      <div
        className="modal__social-login"
      >
        IBUKUN COMPONENT
      </div>
      <div
        className="modal__seperator"
      >
        <p>
          or
        </p>
      </div>
      <div
        className="modal__auth-component"
      >
        <div
          className="modal__social-login"
        >
          JONATUS COMPONENT
        </div>
        <div
          className="modal__setup-tag"
        >
          <p>
            Already have an account ? 
            <button
              className="modal__create-account"
              onClick={[Function]}
              type="button"
            >
              Sign in
            </button>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ShareStory default view 1`] = `
<a
  className="share-story"
  href="/createArticles"
  onClick={[Function]}
>
  <div
    className="share-story__text"
  >
    Share your story...
  </div>
  <img
    alt=""
    className="share-story__image"
    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSoLXTpv0URjl0NTVXoHIKJimWXKu7RoMeENHB2jRBqX3C_Aa7Ktg"
  />
</a>
`;

exports[`Storyshots Signin sign in form 1`] = `
<form
  className="login-form"
  onSubmit={[Function]}
>
  <div
    className="login-form__success login-form__success--hide"
  >
    SIGNIN SUCCESSFUL !
  </div>
  <label
    className="input__label"
    htmlFor="email"
  >
    <input
      className="input__field"
      name="email"
      onChange={[Function]}
      placeholder="Email Address"
      type="text"
    />
  </label>
  <label
    className="input__label"
    htmlFor="password"
  >
    <input
      className="input__field"
      name="password"
      onChange={[Function]}
      placeholder="Password"
      type="password"
    />
  </label>
  <section
    className="login-form__errors"
  />
  <section
    className="login-form__submit-btn"
  >
    <button
      className="button__primary"
      type="submit"
    >
      Sign in
    </button>
  </section>
</form>
`;

exports[`Storyshots Subscription Card default view 1`] = `
<div
  className="subscription-card"
>
  <div
    className="subscription-card__image-div"
  >
    <img
      alt=""
      className="subscription-card__image"
      src="https://militaryfamilies.psu.edu/wp-content/uploads/2019/04/placeholder_profile_photo.png"
    />
  </div>
  <div
    className="subscription-card__details"
  >
    <a
      href="/articles/the-slug-111"
      onClick={[Function]}
    >
      <div
        className="subscription-card__title"
      >
        The biginning
      </div>
    </a>
    <div
      className="subscription-card__summary"
    >
      summary is too short. Hope it is long
    </div>
  </div>
</div>
`;

exports[`Storyshots Vote downvoted 1`] = `
<div
  className="vote"
>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="upvote"
      className="icon icon--upvote"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className=""
    >
      29
    </span>
  </div>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="downvote"
      className="icon icon--downvote icon--active"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className="active"
    >
      11
    </span>
  </div>
</div>
`;

exports[`Storyshots Vote nullvote 1`] = `
<div
  className="vote"
>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="upvote"
      className="icon icon--upvote"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className=""
    >
      29
    </span>
  </div>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="downvote"
      className="icon icon--downvote"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className=""
    >
      10
    </span>
  </div>
</div>
`;

exports[`Storyshots Vote upvoted 1`] = `
<div
  className="vote"
>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="upvote"
      className="icon icon--upvote icon--active"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className="active"
    >
      30
    </span>
  </div>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="downvote"
      className="icon icon--downvote"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className=""
    >
      10
    </span>
  </div>
</div>
`;
